<resources>
    <string name="app_name">Kisan Seva</string>
    <string name="title_home">Home</string>
    <string name="title_crop_predict">Predict</string>
    <string name="title_info">Info</string>
    <string name="title_weather">Weather</string>
    <string name="title_quality">Quality</string>
    <string name="title_profile">Profile</string>
    <string name="title_chat">Chat</string>
    <string name="submit_text">Submit</string>
    <string name="post_title">Url</string>
    <string name="post_description">Port</string>
    <string-array name="policies">
        <item name="policy1">प्रधानमंत्री फसल बीमा योजना</item>

        <item name="policy2">प्रधानमंत्री कृषि सिंचाई योजना </item>

        <item name="policy3">मिनी कामधेनू डेयरी योजना</item>

        <item name="policy4">जैविक खेती के लिए सब्सिडी/आर्थिक सहायता</item>

        <item name="policy5">किसान क्रेडिट कार्ड</item>

        <item name="policy6">राष्ट्रीय खाद्य सुरक्षा मिशन</item>

        <item name="policy7">फसल बीमा का क्लेम के नियम</item>

        <item name="policy8">किसानों को 7% ब्याज पर मिलेगा 3 लाख का लोन</item>

    </string-array>
    <string-array name="policies_link">

        <item name="link1">https://www.india.gov.in/hi/spotlight/%E0%A4%AA%E0%A5%8D%E0%A4%B0%E0%A4%A7%E0%A4%BE%E0%A4%A8%E0%A4%AE%E0%A4%82%E0%A4%A4%E0%A5%8D%E0%A4%B0%E0%A5%80-%E0%A4%AB%E0%A4%B8%E0%A4%B2-%E0%A4%AC%E0%A5%80%E0%A4%AE%E0%A4%BE-%E0%A4%AF%E0%A5%8B%E0%A4%9C%E0%A4%A8%E0%A4%BE#tab=tab-1</item>

        <item name="link2">https://kisanhelp.in/</item>
        //

        <item name="link3">https://kisanhelp.in/vatanary</item>

        <item name="link4">https://kisanhelp.in/government-policies/%E0%A4%B0%E0%A4%BE%E0%A4%B7%E0%A5%8D%E0%A4%9F%E0%A5%8D%E0%A4%B0%E0%A5%80%E0%A4%AF-%E0%A4%95%E0%A5%83%E0%A4%B7%E0%A4%BF-%E0%A4%AC%E0%A5%80%E0%A4%AE%E0%A4%BE-%E0%A4%AF%E0%A5%8B%E0%A4%9C%E0%A4%A8%E0%A4%BE</item>
        //

        <item name="link5">https://kisanhelp.in/organic-farming</item>

        <item name="link6">https://kisanhelp.in/government-policies/%E0%A4%B0%E0%A4%BE%E0%A4%B7%E0%A5%8D%E0%A4%9F%E0%A5%8D%E0%A4%B0%E0%A5%80%E0%A4%AF-%E0%A4%96%E0%A4%BE%E0%A4%A6%E0%A5%8D%E0%A4%AF-%E0%A4%B8%E0%A5%81%E0%A4%B0%E0%A4%95%E0%A5%8D%E0%A4%B7%E0%A4%BE-%E0%A4%AE%E0%A4%BF%E0%A4%B6%E0%A4%A8</item>
        //

        <item name="link7">https://kisanhelp.in/government-policies/%E0%A4%AB%E0%A4%B8%E0%A4%B2-%E0%A4%AC%E0%A5%80%E0%A4%AE%E0%A4%BE-%E0%A4%95%E0%A4%BE-%E0%A4%95%E0%A5%8D%E0%A4%B2%E0%A5%87%E0%A4%AE-%E0%A4%95%E0%A5%87-%E0%A4%A8%E0%A4%BF%E0%A4%AF%E0%A4%AE</item>
        //

        <item name="link8">https://kisanhelp.in/government-policies/%E0%A4%95%E0%A4%BF%E0%A4%B8%E0%A4%BE%E0%A4%A8%E0%A5%8B%E0%A4%82-7-%E0%A4%AC%E0%A5%8D%E0%A4%AF%E0%A4%BE%E0%A4%9C-%E0%A4%AA%E0%A4%B0-%E0%A4%AE%E0%A4%BF%E0%A4%B2%E0%A5%87%E0%A4%97%E0%A4%BE-3-%E0%A4%B2%E0%A4%BE%E0%A4%96-%E0%A4%95%E0%A4%BE-%E0%A4%B2%E0%A5%8B%E0%A4%A8</item>
        //

    </string-array>
    <string name="policy_title">Government Schemes</string>
    <string name="about">About Application</string>
    <string name="about_text">This app is made for the event Hackathon conducted by Digital India and sponsered by HackerEarth.\n\nThis
        is a open source project Source can be found at <a href="https://github.com/sukhbir-singh/AgriculturalApp">link</a></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Call Kisan Help Centre</string>
    <string name="title_activity_bazar__rate__select">Bazar_Rate_Select</string>
    <string name="crop_production_card_title">Crop Production Methods</string>
    <string name="treatment_card_title">Crop Treatment Method</string>
    <string name="storage_card_title">Soil Health Card</string>
    <string name="survey_card_title"> Production Details</string>
    <string name="horticulture_card_title">Horticulture Methods</string>
    <string name="policy_card_title">Government Schemes</string>
    <string name="horticulture_item1_en">Mango</string>
    <string name="horticulture_item2_en">Banana</string>
    <string name="horticulture_item3_en">Guava</string>
    <string name="wheat_h1">1.परिचय</string>
    <string name="wheat_h2">2.उपयुक्त जलवायु क्षेत्र</string>
    <string name="wheat_h3">3.भूमि का चयन</string>
    <string name="wheat_h4">4.खेत  की तैयारी</string>
    <string name="wheat_h5">5.गेहूँ की प्रमुख उन्नत किस्मे</string>
    <string name="wheat_h6">6.बीजोपचार</string>
    <string name="wheat_h7">7.बोआई का समय</string>
    <string name="wheat_h8">8.बीज दर एवं पौध अंतरण</string>
    <string name="wheat_h9">9.बीज बोने की गहराई</string>
    <string name="wheat_h10">10.बोआई की विधियाँ</string>
    <string name="wheat_h11">11.खाद एवं उर्वरक</string>
    <string name="wheat_h12">12.सिंचाई</string>
    <string name="wheat_h13">13.कटाई-गहाई</string>
    <string name="wheat_h14">14.उपज एवं भंडारण</string>
    <string name="crop1_en">Wheat Production Methods</string>
    <string name="crop2_en">Paddy Production Methods</string>
    <string name="crop3_en">Toor Production Methods</string>
    <string name="wh1">
        गेहूँ की खेती विश्व के प्रायः हर भाग में होती है ।
        संसार की कुल 23 प्रतिशत भूमि पर गेहूँ की ख्¨ती की जाती है ।
        गेहूँ विश्वव्यापी महत्त्व की फसल है। मुख्य रूप से एशिया में धान की खेती की जाती है, तो भी विश्व के सभी प्रायद्वीपों में गेहूँ उगाया जाता है।
        विश्व में सबसे अधिक क्षेत्र फल में गेहूँ उगाने वाले प्रमुख तीन  राष्ट्र भारत, रशियन फैडरेशन और  संयुक्त राज्य अमेरिका है ।
        गेहूँ उत्पादन में चीन के बाद भारत तथा अमेरिका का क्रम आता है ।
    </string>
    <string name="wh2">
        गेहूँ मुख्यतः एक ठण्डी एवं शुष्क  जलवायु की फसल है अतः फसल बोने के समय 20 से 22  डि से , बढ़वार के समय
        इष्टतम ताप 25 डि से  तथा पकने के समय  14 से 15 डि से तापक्रम उत्तम  रहता है। तापमान  से अधिक होने पर
        फसल जल्दी पाक जाती है और उपज घट जाती है। पाल्¨ से फसल क¨ बहुत नुकसान होता है । बाली लगने के समय पाला
        पड़ने पर बीज अंकुरण शक्ति ख¨ देते है और  उसका विकास रूक जाता है । छ¨टे दिनो  में पत्तियां   और कल्लो  की बाढ़
        अधिक होती है जबकि दिन बड़ने के साथ-साथ बाली निकलना आरम्भ होता है। इसकी खेती के लिए 60-100 से. मी. वार्षिक
        वर्षा वाले क्षेत्र उपयुक्त रहते है।
    </string>
    <string name="wh3">
        गेहूँ सभी प्रकार की कृषि य¨ग्य भूमियों में पैदा हो सकता है परन्तु दोमट से भारी दोमट, जलोढ़ मृदाओ  मे गेहूँ की खेती
        सफलता पूर्वक की जाती है। जल निकास की सुविधा होने पर मटियार दोमट  तथा काली मिट्टी में भी इसकी अच्छी फसल
        ली जा सकती है। कपास की काली मृदा  में गेहूँ की खेती के लिए सिंचाई की आवश्यकता कम पड़ती है।
    </string>
    <string name="wh4">
        अच्छे  अंकुरण  के लिये एक बेहतर भुरभुरी  मिट्टी की आवश्यकता होती है। समय पर जुताई  खेत में नमी संरक्षण के लिए
        भी आवश्यक है। वास्तव में खेत की तैयारी करते समय हमारा लक्ष्य यह होना चाहिए कि बोआई के समय खेत खरपतवार मुक्
        त  हो, भूमि में पर्याप्त नमी हो तथा मिट्टी इतनी भुरभुरी हो जाये ताकि बोआई आसानी से उचित गहराई तथा समान दूरी पर
        की जा सके। खरीफ की फसल काटने के बाद खेत की पहली जुताई  मिट्टी पलटने वाले हल (एमबी प्लोऊ ) से करनी चाहिए
        जिससे खरीफ फसल के अवशेष   और खरपतवार मिट्टी मे दबकर सड़ जायें। इसके  बाद आवश्यकतानुसार 2-3 जुताइयाँ देशी
        हल - बखर या कल्टीवेटर से करनी चाहिए। प्रत्येक जुताई के बाद पाटा देकर खेत समतल कर लेना चाहिए।
    </string>
    <string name="wh5">
        1.सोनालिका: यह गेरूआ निरोधक, अंबर रग की, बड़े दाने वाले किस्म। यह 110 दिनों में पककर तैयार हो जाता है। देर से
        बोने के लिए उपयुक्त है। धान काटने के बाद जमीन तैयार कर बुवाई की जा सकती है। इसकी पैदावार 30 से 35 क्विंटल
        प्रति हेक्टेयर होती है।
        2.सोनालिका: यह गेरूआ निरोधक, अंबर रग की, बड़े दाने वाले किस्म। यह 110 दिनों में पककर तैयार हो जाता है। देर से
        बोने के लिए उपयुक्त है। धान काटने के बाद जमीन तैयार कर बुवाई की जा सकती है। इसकी पैदावार 30 से 35 क्विंटल
        प्रति हेक्टेयर होती है।
        3.नर्मदा 112: यह पिसिया (सरबती) किस्म है जो काला और भूरा गेरूआ निरोधक है। असिंचित एवं सीमित सिंचाई वाले क्षे
        त्रो के लिए उपयुक्त है।इसके पकने का समय 120 - 135 दिन है। इसकी पैदावार 14 - 16 क्विंटल  प्रति हेक्टेयर होती है।
        इसका दाना सरबती चमकदार और बड़ा होता है। इह चपाती बनाने के लिए विशेष उपयुक्त है।
        4. मालवश्री (एचआई - 8381): यह कठिया गेहूँ की श्रेणी में श्रेष्ठ किस्म है। इसके पौधे बौने (85 - 90 से.मी. ऊँचाई),
        बालियों के बालों का रंग काला होता है। यह किस्म 4 - 5 सिंचाई मे बेहतर उत्पादन देती है। इसके 1000 दानों का
        वजन 50 - 55 ग्राम एवं उपज क्षमता 50 - 60 क्विंटल  प्रति हेक्टर है।

    </string>
    <string name="wh6">
        बुआई के लिए जो  बीज इस्तेमाल किया जाता है वह रोग मुक्त,  प्रमाणित तथा क्षेत्र विशेष के लिए अनुशंषित उन्नत किस्म
        का  होना चाहिए। अलावा रोगों की रोकथाम के लिए ट्राइकोडरमा की 4 ग्राम मात्रा  1 ग्राम कार्बेन्डाजिम के साथ प्रति किग्र
        ा बीज की दर से बीज शोधन किया जा सकता है ।
    </string>
    <string name="wh7">
         गेंहूँ रबी की फसल है जिसे शीतकालीन मौसम   में उगाया जाता है । भारत के विभिन्न भागो  में गेहूँ का जीवन काल
        भिन्न-भिन्न रहता है । सामान्य तौर  पर गेहूं की बोआई अक्टूबर से दिसंबर तक की जाती है तथा फसल की कटाई
        फरवरी से मई तक की जाती है । जिन किस्मों की अवधि 135 - 140 दिन है, उनको नवम्बर के प्रथम पखवाड़े
        में व जो किस्में पकने में 120 दिन का समय लेती है, उन्हे 15 - 30 नवम्बर तक बोना चाहिए।
        असिंचित अवस्था   में बोने का उपयुक्त समय बर्षा ऋतु समाप्त होते ही मध्य अक्टूबर के लगभग है।
        सिंचित गेहूँ बोने का उपयुक्त समय नवम्बर का प्रथम पखवाड़ा है। बोनी में 30 नवम्बर से अधिक देरी नहीं होना चाहिए।
    </string>
    <string name="wh8">
        बीज दर भूमि मे नमी की मात्रा, बोने की विधि तथा किस्म पर निर्भर करती है। बोने गेहूँ   की खेती के लिए बीज की मात्रा
        देशी गेहूँ   से अधिक ह¨ती है । बोने गेहूँ के लिए 100-120 किग्रा. प्रति हैक्टर तथा देशी  गेहूँ के लिए
        70-90 किग्रा. बीज प्रति हैक्टर की दर से ब¨ते है । असिंचित गेहूँ  के लिए बीज की मात्रा 100 किलो प्रति हेक्टेर व
        कतारों के बीच की दूरी 22 - 23 से. मी. होनी चाहिये। समय पर बोये जाने वाले  सिंचित गेहूं  मे बीज दरं
        100 - 125 किलो प्रति हेक्टेयर व कतारो की दूरी 20-22.5 से. मी. रखनी चाहिए। देर वाली सिंचित गेहूं की बोआई
        के लिए बीज दर 125 - 150 कि. ग्रा. प्रति हेक्टेयर तथा पंक्तियों के मध्य 15 - 18 से. मी. का अन्तरण रखना उचित रहता है।
        बीज को रात भर पानी में भिंगोकर बोना लाभप्रद है।
    </string>
    <string name="wh9">
         बौने गेहुँ की बोआई में गहराई का विशेष महत्व होता है, क्योंकि बौनी किस्मों में प्राकुंरचोल  की लम्बाई 4 - 5 से. मी. होती है।
        अतः यदि इन्हे गहरा बो दिया जाता है तो अंकुरण बहुत कम होता है। गेहुँ की बौनी किस्मों क¨ 3-5 से.मी. रखते है ।
        देशी (लम्बी) किस्मों  में प्रांकुरचोल की लम्बाई लगभग 7 सेमी. ह¨ती है । अतः इनकी बोने की गहराई 5-7 सेमी. रखनी चाहिये।
    </string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="enter_product_category">Enter Product Category</string>
    <string name="enter_product_quality">Enter Product Quality</string>
    <string name="quantity_available_in_stock">Quantity Available In Stock</string>
    <string name="price_rs_kg">Price (Rs/Kg)</string>
    <string name="description">Description</string>
    <string name="edit_details">Edit Details</string>
    <string name="items">ITEMS</string>
    <string name="status">STATUS</string>
    <string name="total_amount">TOTAL AMOUNT</string>
    <string name="recents_transactions">Recents Transactions</string>
    <string name="available_balance">Earning from Crop selling</string>
    <string name="request_statement">Request Statement</string>
</resources>