<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

<!--    <item-->
<!--        android:id="@+id/navigation_predict"-->
<!--        android:icon="@drawable/ic_predict"-->
<!--        android:title="@string/title_crop_predict" />-->

    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/ic_info"
        android:title="@string/title_info" />

    <item
        android:id="@+id/navigation_weather"
        android:icon="@drawable/ic_weather"
        android:title="@string/title_weather" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_user"
        android:title="@string/title_profile" />
</menu>
